--- a/Snack 6/style.css
+++ b/Snack 6/style.css
@@ -8,6 +8,7 @@
     color: white;
     height: 150px;
     width: 150px;
+    text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
